[package]
name = "rust-features-example"
version = "0.1.0"
authors = ["k0pernicus <k0pernicus@0xc0ff33.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.english-linguistic-pkg]
version = "0.1.0"
optional = true
default-features = false
path = "english-linguistic-pkg"

[dependencies.french-linguistic-pkg]
version = "0.1.0"
optional = true
default-features = false
path = "french-linguistic-pkg"

[dependencies]
"rand" = "*"

[features]
# English package is installed by default
english = ["english-linguistic-pkg"]
french = ["french-linguistic-pkg"]
